--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
 
-  <title>React TypeScript Project</title>
+  <title>rk-react-typescript-mui</title>
 </head>
 <body>
   <div id="root"></div>
